one small zip step fix, one giant leap for  gh action

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -42,7 +42,7 @@ jobs:
           APP_NAME=$(basename "$APP_PATH")
           (
             cd "$(dirname "$APP_PATH")"
-            zip -r "../../../artifacts/${APP_NAME%.*}-Universal.zip" "$APP_NAME"
+            zip -r "../../../../artifacts/${APP_NAME%.*}-Universal.zip" "$APP_NAME"
           )
 
           echo "Created zip: ./artifacts/${APP_NAME%.*}-Universal.zip"
